--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "release": "np"
   },
   "peerDependencies": {
     "react": "^18 || ^19",
