--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "main": "dist/react-network-aware.umd.js",
   "module": "dist/react-network-aware.es.js",
   "types": "dist/index.d.ts",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
+  },
   "files": [
     "dist"
   ],
